--- a/index.html
+++ b/index.html
@@ -14,20 +14,41 @@
     <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="committee.html">Committee</a></li>
+        
+        <li>
+            <a href="committee.html" class="dropbtn">Committee</a>
+            <ul class="dropdown-content">
+                <li><a href="committee.html">Organizing Committee</a></li>
+                <li><a href="committee.html#steering">Steering Committee</a></li>
+                <li><a href="advisory.html">Advisory Committee</a></li>
+            </ul>
+        </li>
+
         <li><a href="cfp.html">CFP</a></li>
         <li><a href="venue.html">Venue</a></li>
         <li><a href="important-dates.html">Dates</a></li>
         <li><a href="registration.html">Registration</a></li>
+
+        <li>
+            <a href="#" class="dropbtn">Archive</a>
+            <ul class="dropdown-content">
+                <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+                <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+                <li><a href="#" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+                <li><a href="#" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+                <li><a href="#" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+                <li><a href="#" target="_blank">CVIP 2021 (IIT Ropar)</a></li>
+            </ul>
+        </li>
     </ul>
 </nav>
+
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 
 <header class="hero-slider">
     <div class="slide active" style="background-image: url('assets/images/slide1.jpg');"></div>
     <div class="slide" style="background-image: url('assets/images/slide2.jpg');"></div>
     <div class="slide" style="background-image: url('assets/images/slide3.jpg');"></div>
-    
     <div class="hero-content">
         <h2>11th International Conference on</h2>
         <h1>Computer Vision & Image Processing</h1>
@@ -46,36 +67,15 @@
     <div class="dates-table-container reveal-text">
         <table class="dates-table">
             <thead>
-                <tr>
-                    <th>Event</th>
-                    <th>Date</th>
-                </tr>
+                <tr><th>Event</th><th>Date</th></tr>
             </thead>
             <tbody>
-                <tr>
-                    <td><strong>Conference Dates</strong></td>
-                    <td style="color: var(--secondary-color); font-weight: 700;">December 9–12, 2026</td>
-                </tr>
-                <tr>
-                    <td>Paper Submission Opens</td>
-                    <td>To be notified soon</td>
-                </tr>
-                 <tr>
-                    <td>Paper Submission Deadline</td>
-                    <td>To be notified soon</td>
-                </tr>
-                <tr>
-                    <td>Acceptance Notification</td>
-                    <td>To be notified soon</td>
-                </tr>
-                <tr>
-                    <td>Camera Ready Submission</td>
-                    <td>To be notified soon</td>
-                </tr>
-                 <tr>
-                    <td>Registration Deadline</td>
-                    <td>To be notified soon</td>
-                </tr>
+                <tr><td><strong>Conference Dates</strong></td><td style="color: var(--secondary-color); font-weight: 700;">December 9–12, 2026</td></tr>
+                <tr><td>Paper Submission Opens</td><td>To be notified soon</td></tr>
+                <tr><td>Paper Submission Deadline</td><td>To be notified soon</td></tr>
+                <tr><td>Acceptance Notification</td><td>To be notified soon</td></tr>
+                <tr><td>Camera Ready Submission</td><td>To be notified soon</td></tr>
+                <tr><td>Registration Deadline</td><td>To be notified soon</td></tr>
             </tbody>
         </table>
     </div>
@@ -84,37 +84,19 @@
 <section class="section">
     <h2 class="section-title reveal-text">Welcome to CVIP 2026</h2>
     <div class="reveal-text" style="text-align: center; max-width: 900px; margin: 0 auto; font-size: 1.1rem;">
-        <p>The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners.</p>
+        [cite_start]<p>The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners[cite: 1].</p>
         <br>
-        <p><strong>Host Institution:</strong> National Institute of Technology Calicut (NITC), India</p>
-        <p><strong>Publication:</strong> Proceedings will be published in <strong>Springer CCIS</strong> (Scopus Indexed).</p>
+        [cite_start]<p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed)[cite: 116].</p>
     </div>
 </section>
 
 <footer>
     <div class="footer-grid">
-        <div class="footer-col">
-            <h4>CVIP 2026</h4>
-            <p>NIT Calicut & NTNU Norway</p>
-            <p>Dec 9–12, 2026</p>
-        </div>
-        <div class="footer-col">
-            <h4>Links</h4>
-            <ul style="list-style:none;">
-                <li><a href="cfp.html">Call for Papers</a></li>
-                <li><a href="registration.html">Registration</a></li>
-                <li><a href="venue.html">Venue</a></li>
-            </ul>
-        </div>
-        <div class="footer-col">
-            <h4>Contact</h4>
-            <p>Email: cvip2026@nitc.ac.in</p>
-        </div>
+        <div class="footer-col"><h4>CVIP 2026</h4><p>NIT Calicut & NTNU Norway</p><p>Dec 9–12, 2026</p></div>
+        <div class="footer-col"><h4>Links</h4><ul style="list-style:none;"><li><a href="cfp.html">Call for Papers</a></li><li><a href="registration.html">Registration</a></li><li><a href="venue.html">Venue</a></li></ul></div>
+        <div class="footer-col"><h4>Contact</h4><p>Email: cvip2026@nitc.ac.in</p></div>
     </div>
-    <div style="text-align:center; margin-top:40px; padding-top:20px; border-top:1px solid #333;">
-        &copy; 2026 CVIP Conference.
-    </div>
+    <div style="text-align:center; margin-top:40px; padding-top:20px; border-top:1px solid #333;">&copy; 2026 CVIP Conference.</div>
 </footer>
-
 </body>
 </html>
