--- a/about.html
+++ b/about.html
@@ -13,11 +13,29 @@
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
-        <li><a href="committee.html">Committee</a></li>
+        <li>
+            <a href="committee.html" class="dropbtn">Committee</a>
+            <ul class="dropdown-content">
+                <li><a href="committee.html">Organizing Committee</a></li>
+                <li><a href="committee.html#steering">Steering Committee</a></li>
+                <li><a href="advisory.html">Advisory Committee</a></li>
+            </ul>
+        </li>
         <li><a href="cfp.html">CFP</a></li>
         <li><a href="venue.html">Venue</a></li>
         <li><a href="important-dates.html">Dates</a></li>
         <li><a href="registration.html">Registration</a></li>
+        <li>
+            <a href="#" class="dropbtn">Archive</a>
+            <ul class="dropdown-content">
+                <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+                <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+                <li><a href="#" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+                <li><a href="#" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+                <li><a href="#" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+                <li><a href="#" target="_blank">CVIP 2021 (IIT Ropar)</a></li>
+            </ul>
+        </li>
     </ul>
 </nav>
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
@@ -31,10 +49,7 @@
             <div style="width: 60px; height: 4px; background: var(--secondary-color); margin-bottom: 30px;"></div>
             
             <p style="text-align: justify; margin-bottom: 15px;">
-                The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global forum for researchers, academicians, and industry professionals. The conference focuses on the latest advancements in Computer Vision, Image Processing, Artificial Intelligence, and Pattern Recognition.
-            </p>
-            <p style="text-align: justify;">
-                Held annually, CVIP brings together the brightest minds to exchange insights, discuss emerging trends, and foster collaboration in the field of visual computing.
+                [cite_start]The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> will be held from December 9–12, 2026, at the National Institute of Technology Calicut (NITC), India [cite: 1-2]. This prestigious event is organized jointly by NIT Calicut and the Norwegian University of Science and Technology (NTNU), Norway.
             </p>
         </div>
         <div class="reveal-text">
@@ -47,15 +62,7 @@
     <h2 class="section-title reveal-text">Key Highlights</h2>
     <div class="about-highlights reveal-text">
         <div class="highlight-box" style="background: white; padding: 30px; border-top: 5px solid var(--secondary-color);">
-            <h3 style="font-size: 2.5rem; margin-bottom: 5px;">11th</h3>
-            <p style="font-weight: 600; color: #666;">Edition</p>
-        </div>
-        <div class="highlight-box" style="background: white; padding: 30px; border-top: 5px solid var(--primary-color);">
-            <h3 style="font-size: 2.5rem; margin-bottom: 5px;">2</h3>
-            <p style="font-weight: 600; color: #666;">Prestigious Organizers<br>(NITC & NTNU)</p>
-        </div>
-        <div class="highlight-box" style="background: white; padding: 30px; border-top: 5px solid var(--secondary-color);">
-            <h3 style="font-size: 2.5rem; margin-bottom: 5px;">CCIS</h3>
+            <h3 style="font-size: 2.5rem; margin-bottom: 5px;">LNCS</h3>
             <p style="font-weight: 600; color: #666;">Springer Proceedings</p>
         </div>
         <div class="highlight-box" style="background: white; padding: 30px; border-top: 5px solid var(--primary-color);">
@@ -71,10 +78,20 @@
             <h3 style="color: var(--primary-color); border-bottom: 2px solid #eee; padding-bottom: 10px; margin-bottom: 20px;">Jointly Organized By</h3>
             <div style="margin-bottom: 20px;">
                 <h4 style="margin-bottom: 5px;">National Institute of Technology Calicut (NITC)</h4>
-                <p style="font-size: 0.9rem; color: #555;">An Institution of National Importance in India, located in the foothills of the Western Ghats.</p>
             </div>
             <div>
                 <h4 style="margin-bottom: 5px;">Norwegian University of Science and Technology (NTNU)</h4>
-                <p style="font-size: 0.9rem; color: #555;">Norway's largest university, with a main profile in science and technology.</p>
             </div>
         </div>
+        <div class="reveal-text">
+            <h3 style="color: var(--primary-color); border-bottom: 2px solid #eee; padding-bottom: 10px; margin-bottom: 20px;">Publication</h3>
+            <p style="margin-bottom: 15px;">
+                [cite_start]All accepted and presented papers will be published in the <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> series[cite: 116].
+            </p>
+        </div>
+    </div>
+</section>
+
+<footer>© 2026 CVIP Conference. Organized by NIT Calicut & NTNU Norway.</footer>
+</body>
+</html>
