--- a/important-dates.html
+++ b/important-dates.html
@@ -11,13 +11,34 @@
 <nav class="navbar">
     <div class="logo">CVIP 2026</div>
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="committee.html">Committee</a></li>
+        
+        <li>
+            <a href="committee.html" class="dropbtn">Committee</a>
+            <ul class="dropdown-content">
+                <li><a href="committee.html">Organizing Committee</a></li>
+                <li><a href="committee.html#steering">Steering Committee</a></li>
+                <li><a href="advisory.html">Advisory Committee</a></li>
+            </ul>
+        </li>
+
         <li><a href="cfp.html">CFP</a></li>
         <li><a href="venue.html">Venue</a></li>
-        <li><a href="important-dates.html" class="active">Dates</a></li>
+        <li><a href="important-dates.html">Dates</a></li>
         <li><a href="registration.html">Registration</a></li>
+
+        <li>
+            <a href="#" class="dropbtn">Archive</a>
+            <ul class="dropdown-content">
+                <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+                <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+                <li><a href="#" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+                <li><a href="#" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+                <li><a href="#" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+                <li><a href="#" target="_blank">CVIP 2021 (IIT Ropar)</a></li>
+            </ul>
+        </li>
     </ul>
 </nav>
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
