--- a/committee.html
+++ b/committee.html
@@ -73,7 +73,7 @@
             <div class="member-card"><div class="member-name">TBA</div><div class="member-affil">Senior Indian Academician</div></div>
         </div>
     </div>
-    
+
     <div class="committee-group"><div class="group-title">Conference Chairs</div>
         <div class="member-grid">
             <div class="member-card"><div class="member-name">Prof. Kiran Raja</div><div class="member-affil">NTNU, Norway</div></div>
@@ -81,8 +81,103 @@
             <div class="member-card"><div class="member-name">Dr. Praveen Sankaran</div><div class="member-affil">NIT Calicut</div></div>
         </div>
     </div>
-    
-    </section>
+
+    <div class="committee-group"><div class="group-title">Conference Co-Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Prof. Aparajita Ojha</div><div class="member-affil">IIITDM Jabalpur</div></div>
+            <div class="member-card"><div class="member-name">Dr. Puneet Goyal</div><div class="member-affil">IIT Ropar</div></div>
+            <div class="member-card"><div class="member-name">Prof. Sanjeev Kumar</div><div class="member-affil">IIT Roorkee</div></div>
+            <div class="member-card"><div class="member-name">Prof. Gaurav Bhatnagar</div><div class="member-affil">IIT Jodhpur</div></div>
+            <div class="member-card"><div class="member-name">Dr. Santosh Kumar Vipparthi</div><div class="member-affil">IIT Ropar</div></div>
+            <div class="member-card"><div class="member-name">Dr. Jagadeesh Kakarla</div><div class="member-affil">IIITDM Kancheepuram</div></div>
+            <div class="member-card"><div class="member-name">Prof. Sony George</div><div class="member-affil">NTNU Norway</div></div>
+            <div class="member-card"><div class="member-name">Dr. Pournami P. N.</div><div class="member-affil">NIT Calicut</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Program Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Subrahmanyam Murala</div><div class="member-affil">Trinity College Dublin</div></div>
+            <div class="member-card"><div class="member-name">Dr. Abhinav Kumar</div><div class="member-affil">IIT Ropar</div></div>
+            <div class="member-card"><div class="member-name">Dr. Sudipta Banerjee</div><div class="member-affil">Univ. of Wyoming, USA</div></div>
+            <div class="member-card"><div class="member-name">Prof. Chiara Galdi</div><div class="member-affil">Eurecom, France</div></div>
+            <div class="member-card"><div class="member-name">Prof. Marta Gomez-Barrero</div><div class="member-affil">Univ. Bundeswehr München</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Track Chairs (Convenors)</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Deep Gupta</div><div class="member-affil">VNIT Nagpur</div></div>
+            <div class="member-card"><div class="member-name">Dr. Shiv Ram Dubey</div><div class="member-affil">IIIT Allahabad</div></div>
+            <div class="member-card"><div class="member-name">Dr. Shihabudheen K. V.</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. Gopi Krishna Saramekala</div><div class="member-affil">NIT Calicut</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Technical Program Committee</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Amina Bassit</div><div class="member-affil">Michigan State Univ, USA</div></div>
+            <div class="member-card"><div class="member-name">Prof. Chiara Galdi</div><div class="member-affil">Eurecom, France</div></div>
+            <div class="member-card"><div class="member-name">Prof. Marta Gomez-Barrero</div><div class="member-affil">Univ. Bundeswehr München</div></div>
+            <div class="member-card"><div class="member-name">Dr. Amitesh Rajput</div><div class="member-affil">NLIU, Bhopal</div></div>
+            <div class="member-card"><div class="member-name">Dr. Deepak K Jain</div><div class="member-affil">Dalian Univ. of Tech, China</div></div>
+            <div class="member-card"><div class="member-name">Dr. Prashant Patil</div><div class="member-affil">IIT Guwahati</div></div>
+            <div class="member-card"><div class="member-name">Prof. Rama Krishna Sai Gorthi</div><div class="member-affil">IIT Tirupati</div></div>
+            <div class="member-card"><div class="member-name">Dr. Manisha Verma</div><div class="member-affil">IIT (ISM) Dhanbad</div></div>
+            <div class="member-card"><div class="member-name">Dr. Amitesh Singh Rajput</div><div class="member-affil">BITS Pilani</div></div>
+            <div class="member-card"><div class="member-name">Dr. Pushpendra Kumar</div><div class="member-affil">MANIT Bhopal</div></div>
+            <div class="member-card"><div class="member-name">Dr. Vivekraj V. K.</div><div class="member-affil">IIT Dharwad</div></div>
+            <div class="member-card"><div class="member-name">Dr. Harkeerat Kaur</div><div class="member-affil">IIT Jammu</div></div>
+            <div class="member-card"><div class="member-name">Dr. C. Kesavadas</div><div class="member-affil">SCTIMST Thiruvananthapuram</div></div>
+            <div class="member-card"><div class="member-name">Dr. C. M. Senthil Kumar</div><div class="member-affil">ICAR - IISR Kozhikode</div></div>
+            <div class="member-card"><div class="member-name">Dr. A. Ishwara Bhat</div><div class="member-affil">ICAR - IISR Kozhikode</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Publicity Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Aditya Sole</div><div class="member-affil">NTNU, Norway</div></div>
+            <div class="member-card"><div class="member-name">Dr. Amitesh Rajput</div><div class="member-affil">NLIU, Bhopal</div></div>
+            <div class="member-card"><div class="member-name">Dr. P. Prakash</div><div class="member-affil">MIT Anna Univ, Chennai</div></div>
+            <div class="member-card"><div class="member-name">Dr. Sanjay Viswanath</div><div class="member-affil">NIT Calicut</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Workshop Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Prof. Sony George</div><div class="member-affil">NTNU Norway</div></div>
+            <div class="member-card"><div class="member-name">Prof. Deepak Mishra</div><div class="member-affil">IIST Thiruvananthapuram</div></div>
+            <div class="member-card"><div class="member-name">Dr. Rahul Prasannakumar</div><div class="member-affil">Oslo Univ. Hospital</div></div>
+            <div class="member-card"><div class="member-name">Dr. Bindiya T. S.</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Prof. Prakash Nair</div><div class="member-affil">SCTIMST Thiruvananthapuram</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Sponsorship Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Praveen Sankaran</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. Santosh Kumar Vipparthi</div><div class="member-affil">IIT Ropar</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Local Organizing Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Lintu Rajan</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. C. Periyasamy</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. C. N. Shyam Kumar</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. Rahul Radhakrishnan</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. Jagadeesh V. K.</div><div class="member-affil">NIT Calicut</div></div>
+        </div>
+    </div>
+
+    <div class="committee-group"><div class="group-title">Publication Chairs</div>
+        <div class="member-grid">
+            <div class="member-card"><div class="member-name">Dr. Abhinav Dhall</div><div class="member-affil">Monash University</div></div>
+            <div class="member-card"><div class="member-name">Dr. Ameer P. M.</div><div class="member-affil">NIT Calicut</div></div>
+            <div class="member-card"><div class="member-name">Dr. Jayakumar E. P.</div><div class="member-affil">NIT Calicut</div></div>
+        </div>
+    </div>
+</section>
 <footer>© 2026 CVIP Conference. Organized by NIT Calicut & NTNU Norway.</footer>
 </body>
 </html>
