Test Initial Commit

--- a/cfp.html
+++ b/cfp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CFP | CVIP 2026</title>
+    <title>Call for Papers | CVIP 2026</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script defer src="assets/js/main.js"></script>
 </head>
