Update CMT details, remove Date on CFP page

--- a/cfp.html
+++ b/cfp.html
@@ -165,7 +165,7 @@
     <div class="submission-card reveal-text">
         <h2 class="card-header">Submission Portal</h2>
         <p>Authors can submit their papers through Microsoft CMT online submission system.</p>
-        <p class="portal-date"><strong>Portal opens:</strong> 07 October 2025</p>
+        <p class="portal-date"><strong>Portal opens:</strong>Will be Updated Soon</p>
         <a href="#" class="btn btn-portal">Go to Submission Portal</a>
     </div>
 
