--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     <section class="section">
         <h2 class="section-title reveal-text">Welcome to CVIP 2026</h2>
         <div class="reveal-text" style="text-align: center; max-width: 900px; margin: 0 auto; font-size: 1.1rem;">
-            [cite_start]<p>The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners[cite: 1].</p>
+            <p>The <strong>11th International Conference on Computer Vision and Image Processing (CVIP 2026)</strong> is a premier global gathering of researchers and practitioners.</p>
             <br>
-            [cite_start]<p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed)[cite: 116].</p>
+            <p><strong>Publication:</strong> Proceedings will be published in <strong>Springer Lecture Notes in Computer Science (LNCS)</strong> (Scopus Indexed).</p>
         </div>
     </section>
 
@@ -107,3 +107,4 @@
     </footer>
     </body>
     </html>
+
