--- a/index.html
+++ b/index.html
@@ -60,10 +60,6 @@
         <h2>11th International Conference on</h2>
         <h1>Computer Vision & Image Processing</h1>
         
-        <div class="theme-visual-container">
-            <div class="theme-box">Theme: Vision for Humanity</div>
-            <img src="assets/images/vision.png" alt="Vision for Humanity" class="theme-image">
-        </div>
         <p style="font-size: 1.2rem; margin: 15px 0;">December 9–12, 2026</p>
         <p style="font-size: 1.1rem; margin-bottom: 25px; color: #ffeb3b; font-weight: 500;">
             Hosted by: NIT Calicut, India<br>
@@ -73,6 +69,13 @@
         <a href="venue.html" class="btn btn-outline">Conference Venue</a>
     </div>
 </header>
+
+<section class="section" style="padding-top: 40px; padding-bottom: 40px;">
+    <div class="theme-visual-container reveal-text">
+        <div class="theme-box">Theme: Vision for Humanity</div>
+        <img src="assets/images/vision.jpg" alt="Vision for Humanity" class="theme-image">
+    </div>
+</section>
 
 <section class="section" style="background: #f8f9fa;">
     <h2 class="section-title reveal-text">Important Dates</h2>
@@ -103,12 +106,3 @@
 </section>
 
 <footer>
-    <div class="footer-grid">
-        <div class="footer-col"><h4>CVIP 2026</h4><p>NIT Calicut & NTNU Norway</p><p>Dec 9–12, 2026</p></div>
-        <div class="footer-col"><h4>Links</h4><ul style="list-style:none;"><li><a href="cfp.html">Call for Papers</a></li><li><a href="registration.html">Registration</a></li><li><a href="venue.html">Venue</a></li></ul></div>
-        <div class="footer-col"><h4>Contact</h4><p>Email: cvip2026@nitc.ac.in</p></div>
-    </div>
-    <div style="text-align:center; margin-top:40px; padding-top:20px; border-top:1px solid #333;">&copy; 2026 CVIP Conference.</div>
-</footer>
-</body>
-</html>
