--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <section class="section" style="padding-top: 40px; padding-bottom: 40px;">
     <div class="theme-visual-container reveal-text">
-        <div class="theme-box">Theme: Vision for Humanity</div>
-        <img src="assets/images/vision.jpg" alt="Vision for Humanity" class="theme-image">
+        <div class="theme-box">Vision for Humanity</div>
+        <img src="assets/images/vision.png" alt="Vision for Humanity" class="theme-image">
     </div>
 </section>
 
@@ -106,3 +106,4 @@
 </section>
 
 <footer>
+
