--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </thead>
             <tbody>
                 <tr><td><strong>Conference Dates</strong></td><td style="color: var(--secondary-color); font-weight: 700;">December 9–12, 2026</td></tr>
-                <tr><td>Paper Submission Opens</td><td>To be notified soon</td></tr>
+                <tr><td>Paper Submission Opens</td><td>20 January 2026</td></tr>
                 <tr><td>Paper Submission Deadline</td><td>To be notified soon</td></tr>
                 <tr><td>Acceptance Notification</td><td>To be notified soon</td></tr>
                 <tr><td>Camera Ready Submission</td><td>To be notified soon</td></tr>
@@ -106,4 +106,5 @@
 </section>
 
 <footer>
+
 
