--- a/cfp.html
+++ b/cfp.html
@@ -8,43 +8,43 @@
 </head>
 <body>
 <nav class="navbar">
-        <div class="logo">CVIP 2026</div>
+    <div class="logo">CVIP 2026</div>
 
-        <div class="mobile-menu-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+    <div class="mobile-menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            
-            <li>
-                <a href="committee.html" class="dropbtn">Committee</a>
-                <ul class="dropdown-content">
-                    <li><a href="committee.html">Organizing Committee</a></li>
-                    <li><a href="committee.html#steering">Steering Committee</a></li>
-                    <li><a href="advisory.html">Advisory Committee</a></li>
-                </ul>
-            </li>
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        
+        <li>
+            <a href="committee.html" class="dropbtn">Committee</a>
+            <ul class="dropdown-content">
+                <li><a href="committee.html">Organizing Committee</a></li>
+                <li><a href="committee.html#steering">Steering Committee</a></li>
+                <li><a href="advisory.html">Advisory Committee</a></li>
+            </ul>
+        </li>
 
-            <li><a href="cfp.html" class="active">Call for Papers</a></li>
-            <li><a href="venue.html">Venue</a></li>
-            <li><a href="important-dates.html">Dates</a></li>
-            <li><a href="registration.html">Registration</a></li>
+        <li><a href="cfp.html" class="active">Call for Papers</a></li>
+        <li><a href="venue.html">Venue</a></li>
+        <li><a href="important-dates.html">Dates</a></li>
+        <li><a href="registration.html">Registration</a></li>
 
-            <li>
-                <a href="#" class="dropbtn">Archive</a>
-                <ul class="dropdown-content">
-                    <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
-                    <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
-                    <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
-                    <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
-                    <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
-                </ul>   
-            </li>
-        </ul>
+        <li>
+            <a href="#" class="dropbtn">Archive</a>
+            <ul class="dropdown-content">
+                <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+                <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+                <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+                <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+                <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+            </ul>   
+        </li>
+    </ul>
 </nav>
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 
@@ -60,7 +60,7 @@
         Topics of interest cover all aspects of computer vision and image processing including, but not limited to:
     </p>
 
-    <div class="reveal-text topics-list-container">
+    <div class="reveal-text topics-list-container" style="text-align: left;">
         <ul style="list-style-type: disc; padding-left: 20px; line-height: 1.8;">
             <li>AI-Powered Image Analysis / Computer Vision</li>
             <li>Biometrics, Forensics, Content Protection</li>
@@ -89,7 +89,7 @@
         </ul>
     </div>
 
-    <div class="reveal-text" style="max-width: 800px; margin: 0 auto; text-align: center;">
+    <div class="reveal-text" style="max-width: 800px; margin: 0 auto; text-align: left;">
         <div class="group-title" style="display: inline-block; padding: 10px 30px;">Technical Tracks</div>
         <ul style="list-style: none; line-height: 2.2; padding-left: 0; margin-top: 20px;">
             <li>✅ AI / Machine Learning for CV & IP</li>
