--- a/cfp.html
+++ b/cfp.html
@@ -89,9 +89,10 @@
         </ul>
     </div>
 
-    <div class="reveal-text" style="max-width: 800px; margin: 0 auto; text-align: left;">
+    <div class="reveal-text" style="max-width: 800px; margin: 0 auto; text-align: center;">
         <div class="group-title" style="display: inline-block; padding: 10px 30px;">Technical Tracks</div>
-        <ul style="list-style: none; line-height: 2.2; padding-left: 0; margin-top: 20px;">
+        <br>
+        <ul style="list-style: none; line-height: 2.2; padding-left: 0; margin-top: 20px; display: inline-block; text-align: left;">
             <li>✅ AI / Machine Learning for CV & IP</li>
             <li>✅ Computational Imaging and Emerging Technologies</li>
             <li>✅ Computer Vision / Pattern Recognition</li>
