--- a/cfp.html
+++ b/cfp.html
@@ -89,10 +89,9 @@
         </ul>
     </div>
 
-    <div class="reveal-text" style="max-width: 800px; margin: 0 auto; text-align: center;">
-        <div class="group-title" style="display: inline-block; padding: 10px 30px;">Technical Tracks</div>
-        <br>
-        <ul style="list-style: none; line-height: 2.2; padding-left: 0; margin-top: 20px; display: inline-block; text-align: left;">
+    <h2 class="section-title reveal-text" style="margin-top: 60px;">Technical Tracks</h2>
+    <div class="reveal-text" style="text-align: center;">
+        <ul style="list-style: none; line-height: 2.2; padding-left: 0; display: inline-block; text-align: left;">
             <li>✅ AI / Machine Learning for CV & IP</li>
             <li>✅ Computational Imaging and Emerging Technologies</li>
             <li>✅ Computer Vision / Pattern Recognition</li>
