--- a/cfp.html
+++ b/cfp.html
@@ -40,85 +40,4 @@
                 <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
                 <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
                 <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
-                <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
-                <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
-            </ul>   
-        </li>
-    </ul>
-</nav>
-<div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
-
-<div class="page-hero"><h1>Call For Papers</h1></div>
-
-<section class="section">
-    <h2 class="section-title reveal-text">Topics of Interest</h2>
-    <p style="text-align:center; max-width:800px; margin:0 auto 20px;" class="reveal-text">
-        CVIP 2026 invites original research contributions. Proceedings will be published in <strong>Springer LNCS</strong>.
-    </p>
-
-    <p style="text-align:center; max-width:900px; margin:0 auto 30px; font-weight:500;" class="reveal-text">
-        Topics of interest cover all aspects of computer vision and image processing including, but not limited to:
-    </p>
-
-    <div class="reveal-text topics-list-container" style="text-align: left;">
-        <ul style="list-style-type: disc; padding-left: 20px; line-height: 1.8;">
-            <li>AI-Powered Image Analysis / Computer Vision</li>
-            <li>Biometrics, Forensics, Content Protection</li>
-            <li>Compressed Image/ Video Analytics</li>
-            <li>Computational Imaging</li>
-            <li>Datasets and Evaluation</li>
-            <li>Deep Learning for Computer Vision</li>
-            <li>Document and Synthetic Visual Processing</li>
-            <li>Document Image Analysis</li>
-            <li>Explainable AI / Gen AI for Computer Vision</li>
-            <li>Face, Iris, Emotion, Sign Language and Gesture Recognition</li>
-            <li>Human Computer Interaction</li>
-            <li>Image Restoration/Super Resolution</li>
-            <li>Image/ Video Processing for Autonomous Vehicles / Motion / Tracking</li>
-            <li>Image/ Video Retrieval / Forensics</li>
-            <li>Image/ Video Scene Understanding</li>
-            <li>Image/ Video Security and Quality Assessment</li>
-            <li>Medical Image Analysis</li>
-            <li>Pattern Recognition / Activity Detection</li>
-            <li>Quantum Computer Vision</li>
-            <li>Remote Sensing, Hyperspectral Image Processing</li>
-            <li>Segmentation and Shape Representation</li>
-            <li>Vision based Human Gait Analysis</li>
-            <li>Visual Sensor Hardware, Visual Surveillance</li>
-            <li>3D/X-ray/Thermal Image/Video Processing</li>
-        </ul>
-    </div>
-
-    <h2 class="section-title reveal-text" style="margin-top: 60px;">Technical Tracks</h2>
-    <div class="reveal-text" style="text-align: center;">
-        <ul style="list-style: none; line-height: 2.2; padding-left: 0; display: inline-block; text-align: left;">
-            <li>✅ AI / Machine Learning for CV & IP</li>
-            <li>✅ Computational Imaging and Emerging Technologies</li>
-            <li>✅ Computer Vision / Pattern Recognition</li>
-            <li>✅ Image / Video Processing</li>
-            <li>✅ Image Biometrics / Forensics</li>
-            <li>✅ Medical / Remote Sensing Applications</li>
-        </ul>
-    </div>
-</section>
-
-<section class="section acknowledgment-section">
-    <div class="submission-card reveal-text">
-        <h2 class="card-header">Submission Portal</h2>
-        <p>Authors can submit their papers through Microsoft CMT online submission system.</p>
-        <p class="portal-date"><strong>Portal opens:</strong> Will be Updated Soon</p>
-        <a href="#" class="btn btn-portal">Go to Submission Portal</a>
-    </div>
-
-    <div class="acknowledgment-content reveal-text">
-        <h2 class="section-title">Acknowledgment</h2>
-        <p>
-            The Microsoft CMT service was used for managing the peer-reviewing process for this conference. 
-            This service was provided for free by Microsoft and they bore all expenses, including costs 
-            for Azure cloud services as well as for software development and support.
-        </p>
-    </div>
-</section>
-<footer>© 2026 CVIP Conference.</footer>
-</body>
-</html>
+                <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT
