--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ul>
 </nav>
 
-<div class="marquee"><div class="marquee-content">📢 Paper submission opens on 30 January 2026! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
+<div class="marquee"><div class="marquee-content">📢 Paper submission opens on 30 January 2026! &nbsp;&bull;&nbsp; 📅 Conference Dates: Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 
 <header class="hero-slider">
     <div class="slide active" style="background-image: url('assets/images/slide1.jpg');"></div>
@@ -106,6 +106,7 @@
 </section>
 
 <footer>
+
 
 
 
