Update paper submission date in important-dates.html

--- a/important-dates.html
+++ b/important-dates.html
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td>Paper Submission Opens</td>
-                    <td>To be notified soon</td>
+                    <td>30 January 2026</td>
                 </tr>
                  <tr>
                     <td>Paper Submission Deadline</td>
