Update paper submission date in registration.html

--- a/registration.html
+++ b/registration.html
@@ -48,8 +48,7 @@
             </li>
         </ul>
 </nav>
-<div class="marquee"><div class="marquee-content">📢 Paper submission opens soon! &nbsp;&bull;&nbsp; 📅 Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
-
+<div class="marquee"><div class="marquee-content">📢 Paper submission opens on 30 January 2026! &nbsp;&bull;&nbsp; 📅 Conference Dates: Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 <div class="page-hero"><h1>Registration</h1></div>
 
 <section class="section">
