Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <tbody>
                 <tr><td><strong>Conference Dates</strong></td><td style="color: var(--secondary-color); font-weight: 700;">December 9–12, 2026</td></tr>
                 <tr><td>Paper Submission Opens</td><td>30 January 2026</td></tr>
-                <tr><td>Paper Submission Deadline</td><td>15 April 2026 soon</td></tr>
+                <tr><td>Paper Submission Deadline</td><td>15 April 2026</td></tr>
                 <tr><td>Acceptance Notification</td><td>15 June 2026</td></tr>
                 <tr><td>Camera Ready Submission</td><td>15 July 2026</td></tr>
                 <tr><td>Registration Deadline</td><td>To be notified soon</td></tr>
@@ -106,6 +106,7 @@
 </section>
 
 <footer>
+
 
 
 
