Refactor navigation links in important-dates.html

--- a/important-dates.html
+++ b/important-dates.html
@@ -17,36 +17,42 @@
             <span></span>
         </div>
 
-        <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            
-            <li>
-                <a href="committee.html" class="dropbtn">Committee</a>
-                <ul class="dropdown-content">
-                    <li><a href="committee.html">Organizing Committee</a></li>
-                    <li><a href="committee.html#steering">Steering Committee</a></li>
-                    <li><a href="advisory.html">Advisory Committee</a></li>
-                </ul>
-            </li>
-
-            <li><a href="cfp.html">Call for Papers</a></li>
-            <li><a href="venue.html">Venue</a></li>
-            <li><a href="important-dates.html">Dates</a></li>
-            <li><a href="registration.html">Registration</a></li>
-
+<ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     
-            <li>
-                <a href="#" class="dropbtn">Archive</a>
-                <ul class="dropdown-content">
-                    <li><a href="https://link.springer.com/conference/cvip" >Past Proceedings (Springer)</a></li>
-                    <li><a href="https://iitrpr.ac.in/cvip2025" >CVIP 2025 (IIT Ropar)</a></li>
-                    <li><a href="https://cvip2024.iiitdm.ac.in/" >CVIP 2024 (IIITDM Kancheepuram)</a></li>
-                    <li><a href="https://iitjammu.ac.in/cvip2023/" >CVIP 2023 (IIT Jammu)</a></li>
-                    <li><a href="https://vnit.ac.in/cvip2022/index.php" >CVIP 2022 (VNIT Nagpur)</a></li>
-                </ul>   
-            </li>
+    <li>
+        <a href="committee.html" class="dropbtn">Committee</a>
+        <ul class="dropdown-content">
+            <li><a href="committee.html">Organizing Committee</a></li>
+            <li><a href="committee.html#steering">Steering Committee</a></li>
+            <li><a href="advisory.html">Advisory Committee</a></li>
         </ul>
+    </li>
+
+    <li>
+        <a href="cfp.html" class="dropbtn">Call for Papers</a>
+        <ul class="dropdown-content">
+            <li><a href="cfp.html">Topics & Tracks</a></li>
+            <li><a href="author-guidelines.html">Author Guidelines</a></li>
+        </ul>
+    </li>
+
+    <li><a href="venue.html">Venue</a></li>
+    <li><a href="important-dates.html" class="active">Dates</a></li>
+    <li><a href="registration.html">Registration</a></li>
+
+    <li>
+        <a href="#" class="dropbtn">Archive</a>
+        <ul class="dropdown-content">
+            <li><a href="https://link.springer.com/conference/cvip" target="_blank">Past Proceedings (Springer)</a></li>
+            <li><a href="https://iitrpr.ac.in/cvip2025" target="_blank">CVIP 2025 (IIT Ropar)</a></li>
+            <li><a href="https://cvip2024.iiitdm.ac.in/" target="_blank">CVIP 2024 (IIITDM Kancheepuram)</a></li>
+            <li><a href="https://iitjammu.ac.in/cvip2023/" target="_blank">CVIP 2023 (IIT Jammu)</a></li>
+            <li><a href="https://vnit.ac.in/cvip2022/index.php" target="_blank">CVIP 2022 (VNIT Nagpur)</a></li>
+        </ul>   
+    </li>
+</ul>
 </nav>
 <div class="marquee"><div class="marquee-content">📢 Paper submission opens on 30 January 2026! &nbsp;&bull;&nbsp; 📅 Conference Dates: Dec 9–12, 2026 &nbsp;&bull;&nbsp; 📍 Jointly Organized by NIT Calicut & NTNU Norway</div></div>
 <div class="page-hero"><h1>Important Dates</h1></div>
